Additional fixes and alignments of general UI

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -14,6 +14,10 @@ body {
     cursor: pointer;
 }
 
+.empty-search {
+    margin-top: 40px;
+}
+
 @media (min-width: 481px) {
     #main-layout {
         padding: 20px 80px;
